--- a/Dependencies.toml
+++ b/Dependencies.toml
@@ -14,8 +14,7 @@ dependencies = [
 	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "io"},
 	{org = "ballerina", name = "test"},
-	{org = "ballerinai", name = "observe"},
-	{org = "ballerinax", name = "azure_storage_service"}
+	{org = "ballerinai", name = "observe"}
 ]
 modules = [
 	{org = "anupama", packageName = "file_service_demo1", moduleName = "file_service_demo1"}
@@ -78,7 +77,7 @@ dependencies = [
 [[package]]
 org = "ballerina"
 name = "http"
-version = "2.5.2"
+version = "2.5.3"
 dependencies = [
 	{org = "ballerina", name = "auth"},
 	{org = "ballerina", name = "cache"},
@@ -212,14 +211,6 @@ dependencies = [
 
 [[package]]
 org = "ballerina"
-name = "lang.xml"
-version = "0.0.0"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
-org = "ballerina"
 name = "log"
 version = "2.5.1"
 dependencies = [
@@ -315,14 +306,6 @@ dependencies = [
 ]
 
 [[package]]
-org = "ballerina"
-name = "xmldata"
-version = "2.3.1"
-dependencies = [
-	{org = "ballerina", name = "jballerina.java"}
-]
-
-[[package]]
 org = "ballerinai"
 name = "observe"
 version = "0.0.0"
@@ -332,42 +315,6 @@ dependencies = [
 ]
 modules = [
 	{org = "ballerinai", packageName = "observe", moduleName = "observe"}
-]
-
-[[package]]
-org = "ballerinax"
-name = "azure_storage_service"
-version = "4.0.0"
-dependencies = [
-	{org = "ballerina", name = "crypto"},
-	{org = "ballerina", name = "file"},
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "io"},
-	{org = "ballerina", name = "jballerina.java"},
-	{org = "ballerina", name = "lang.array"},
-	{org = "ballerina", name = "lang.xml"},
-	{org = "ballerina", name = "log"},
-	{org = "ballerina", name = "os"},
-	{org = "ballerina", name = "regex"},
-	{org = "ballerina", name = "time"},
-	{org = "ballerina", name = "xmldata"},
-	{org = "ballerinai", name = "observe"},
-	{org = "ballerinax", name = "client.config"}
-]
-modules = [
-	{org = "ballerinax", packageName = "azure_storage_service", moduleName = "azure_storage_service"},
-	{org = "ballerinax", packageName = "azure_storage_service", moduleName = "azure_storage_service.blobs"},
-	{org = "ballerinax", packageName = "azure_storage_service", moduleName = "azure_storage_service.files"},
-	{org = "ballerinax", packageName = "azure_storage_service", moduleName = "azure_storage_service.utils"}
-]
-
-[[package]]
-org = "ballerinax"
-name = "client.config"
-version = "1.0.1"
-dependencies = [
-	{org = "ballerina", name = "http"},
-	{org = "ballerina", name = "oauth2"}
 ]
 
 
